[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>", "Sydney Yin <fellfromatree@gmail.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
trait_alias = []
iter_next_chunk = []

[dependencies]
custom_derive = "0.1.7"
enum-display-derive = "0.1.1"
enum_derive = "0.1.7"
itertools = "0.10.5"
macro_const = "0.1.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
pico-args = "0.5.0"
readonly = "0.2.2"
replace_with = "0.1.7"
seq-macro = "0.3.1"
strum_macros = "0.24.3"
unicode-segmentation = "1.10.0"
